# Blupi-Bouncers

./: Blupi Bouncers.dev  Blupi Bouncers.layout  Blupi_Bouncers_private.h  Blupi_Bouncers_private.rc  Blupi_Bouncers_private.res  CHANGES.txt  CMakeLists.txt  HELP.txt  Makefile.win  clearscreen.h  colormode.h  custom.manifest  getSize.h  getsystemhandle.dev  getsystemhandle.layout  getsystemhandle_private.h  getsystemhandle_private.rc  getsystemhandle_private.res  main.cpp  manifest.rc  settings.txt  usersettings.h
